Fix text in dropdowns not being readable in certain themes

--- a/common/components/DropdownMenu/DropdownMenu.module.scss
+++ b/common/components/DropdownMenu/DropdownMenu.module.scss
@@ -44,7 +44,7 @@
 
   &--primary {
     background-color: var(--c-bg);
-
+    color: var(--c-text);
     li {
       &:hover {
         color: var(--c-primary-container-text);
